# flask_covid19

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Gruntfile.js  LICENSE.md  MANIFEST.in  Makefile  README.md  app.py  cli.cmd  cli.sh  flask_covid19.Rproj  flask_covid19.wsgi  mq.bat  mq.cmd  mq.sh  package-lock.json  package.json  pyproject.toml  run.sh  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: makefile.yml
.run/: db.run.xml  download.run.xml  mq.run.xml  web.run.xml
data/: Makefile
data_divi/: divi_service.py  divi_service_import.py  divi_service_update.py  divi_test_service.py  divi_test_views.py  divi_views.py
docs/: BACKLOG.md  BACKLOG_Config.md  BACKLOG_Issues.md  BACKLOG_Test_Cases.md  BACKLOG_Use_Cases.md  Blueprints.md  Index.md  Makefile  README.md  Software_Architecture.md  TODO.md  UML_Blueprints.md  conf.py  index.md  index.rst  plantuml.bat
docs/db/: MariadDB.md  OracleDB.md  PostgresSQL.md
docs_bak/: BACKLOG_Config.md  Blueprints.md  UML_Blueprints.md  conf.py  index.md
docs_bak1/: BACKLOG.md
etc/: Makefile  Makefile2  TODO.md  git-merge-branch-to-master.sh  requirements.txt  requirements_linux.txt  requirements_windows.txt
flask_covid19/: .gitignore  Gruntfile.js  app.py  client_ecdc.py  client_owid.py  client_rki.py  client_vaccination.py  client_who.py  mq.py  mq.sh  package-lock.json  package.json  web.py
flask_covid19/app_all/: all_model.py  all_model_import.py  all_model_import_mixins.py  all_model_mixins.py  all_service.py  all_service_download.py
flask_covid19/app_client/: data_download.py  data_runner.py  (+1 more)
flask_covid19_client/: .Rprofile  .gitignore  Makefile  flask_covid19_client.Rproj  requirements.in  requirements.txt  who.R  who.ipynb  who.py  windows.in
flask_covid19_client_r/: flask_covid19_client_r.Rproj
instance/: flask.cfg  flask_test.cfg
project/: .gitignore  client_ecdc.py  client_owid.py  client_rki.py  client_vaccination.py  client_who.py  mq.py
requirements/: build.in  build.txt  dev.in  dev.txt  docs.in  docs.txt  req_build.py  req_dev.py  req_docs.py  req_tests.py  tests.in  tests.txt
scripts/: script_npm_install.py  script_run_uml_plantuml.sh  script_setup_requirements.py
src/: config.py  database.py  mq.py  web.py
tests/:      pytest.ini  config.py  pytestconfig.py  test_application_views.py  test_flask_covid19.py  test_who_views.py
(+1442 files in other folders)
