[build-system]
requires = [
	"wheel",
	"pip-tools",
	"pipenv",
	"virtualenv",
	"pytoolbox",
	"python-dotenv",
	"Flask",
	"urllib3>=1.26.5",
	"pillow>=8.3.2",
	"Pallets-Sphinx-Themes",
	"sphinx",
	"pytest",
	"pytest-runner",
	"pytest-flask",
	"pytest-flask-sqlalchemy",
]
build-backend = "setuptools.build_meta"



