[build-system]
requires = [
	"wheel",
	"build",
	"pip-tools",
	"pre-commit",
	"tox",
	"pipenv",
	"virtualenv",
	"pytoolbox",
	"python-dotenv",
	"Flask",
	"urllib3>=1.26.5",
	"pillow>=8.3.2",
	"Pallets-Sphinx-Themes",
	"Sphinx",
	"sphinx-issues",
	"sphinxcontrib-log-cabinet",
	"sphinxcontrib-plantuml",
	"sphinxcontrib-bibtex",
	"sphinxcontrib-images",
	"sphinxcontrib-gravizo",
	"sphinxcontrib-needs",
	"sphinxcontrib-markdown",
	"sphinx-tabs",
	"myst-parser",
	"pytest",
	"pytest-runner",
	"pytest-flask",
	"pytest-flask-sqlalchemy",
]
build-backend = "setuptools.build_meta"
