[metadata]
name = flask-covid19
version = 0.0.78
url = https://github.com/thomaswoehlke/flask_covid19.git
author = Thomas Woehlke
author_email = thomas.woehlke@gmail.com
license = GNU General Public License v3 (GPLv3)
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 3 - Alpha
    Natural Language :: German
    Natural Language :: English
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Database :: Frontends
    Framework :: Flask
description = Covid19 Data Aggregation - also a Project to learn Python Flask, SQLAlchemy, Celery et al.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
# package_dir = flask_covid19
include_package_data = true
python_requires = >= 3.9
# Dependencies are in setup.py for GitHub's dependency graph.
